fix: z-index 수정

--- a/src/pages/GraduationCalculatorPage/components/CourseTable/CourseTable.module.scss
+++ b/src/pages/GraduationCalculatorPage/components/CourseTable/CourseTable.module.scss
@@ -61,7 +61,7 @@
   border-radius: 8px;
   padding: 16px;
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.04), 0px 4px 10px 0px rgba(0, 0, 0, 0.08);
-  z-index: 22;
+  z-index: 21;
 
   &__content {
     font-family: Pretendard, sans-serif;
